update con FireBase

--- a/React1/src/App.css
+++ b/React1/src/App.css
@@ -3,7 +3,7 @@
     padding-left: 1rem;
 }
 
-.d-flex{
+/* .d-flex{
     background-color: white;
     display: flex;
     flex-wrap: wrap;
@@ -13,4 +13,4 @@
 .c-flex{
         width: 19rem;
         margin: 5px;
-}
+} */
