--- a/React1/src/App.css
+++ b/React1/src/App.css
@@ -22,8 +22,14 @@ body{
 .title-page{
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 20px;
+    font-size: 30px;
     margin-right: 30px;
+}
+.title-page:hover{
+    color: white;
+}
+.title-page:visited{
+    color: white;
     text-decoration: none;
 }
 .btnborrar {
@@ -245,5 +251,11 @@ body{
       box-shadow: 0 -8px #076fe5;
       height: 40px;
     }
+  }
+
+  .spancart{
+    text-decoration: none;
+    margin-top:4px ;
+    margin-left: 10px;
   }
   
