--- a/React1/src/App.css
+++ b/React1/src/App.css
@@ -86,7 +86,7 @@ body{
     margin: 20px;
     font-size: 17px;
     color: white;
-    border: 2px solid var(--color);
+    border: 2px solid var();
     border-radius: 10px;
   }
 
@@ -202,7 +202,7 @@ body{
   .jimu-primary-loading:before,
   .jimu-primary-loading:after,
   .jimu-primary-loading {
-    background: #076fe5;
+    background: #131314;
     -webkit-animation: loading-keys-app-loading 0.8s infinite ease-in-out;
     animation: loading-keys-app-loading 0.8s infinite ease-in-out;
     width: 13.6px;
@@ -225,13 +225,13 @@ body{
     80%,
     100% {
       opacity: .75;
-      box-shadow: 0 0 #076fe5;
+      box-shadow: 0 0 #10151a;
       height: 32px;
     }
   
     40% {
       opacity: 1;
-      box-shadow: 0 -8px #076fe5;
+      box-shadow: 0 -8px #0e151d;
       height: 40px;
     }
   }
@@ -242,13 +242,13 @@ body{
     80%,
     100% {
       opacity: .75;
-      box-shadow: 0 0 #076fe5;
+      box-shadow: 0 0 #0e151c;
       height: 32px;
     }
   
     40% {
       opacity: 1;
-      box-shadow: 0 -8px #076fe5;
+      box-shadow: 0 -8px #080809;
       height: 40px;
     }
   }
@@ -257,5 +257,24 @@ body{
     text-decoration: none;
     margin-top:4px ;
     margin-left: 10px;
+  }
+  
+  .button-11 {
+    --button_radius: 1.75rem;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-radius: var(--button_radius);
+    background: var(--button_outline_color);
+  }
+  
+  .button_top {
+    display: block;
+    box-sizing: border-box;
+    border: 5px solid var(--button_outline_color);
+    border-radius: var(--button_radius);
+    padding: 5px 10px;
+    background-color: #000;
   }
   
