--- a/React1/src/App.css
+++ b/React1/src/App.css
@@ -85,7 +85,7 @@ body{
     width: 6em;
     margin: 20px;
     font-size: 17px;
-    color: white;
+    color: black;
     border: 2px solid var();
     border-radius: 10px;
   }
