--- a/React1/src/App.css
+++ b/React1/src/App.css
@@ -68,13 +68,19 @@ body{
   }
   .input {
     background-color: #232222;
-    max-width: 50px;
-    height: 50px;
-    padding: 5px;
+    max-width: 45px;
+    height: 45px;
+    margin: auto;
+    padding: 3px;
     text-align: right;
-    border: 2px solid white;
-    border-radius: 5px;
+    border: 1px solid white;
+    border-radius: 20px;
     color: #D1D5DB;
+  }
+  .input[type = number]::-webkit-inner-spin-button,
+  input[type = number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin-right: 15px;
   }
   
 
